# pytest-socket

./: .codeclimate.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  pytest.ini  pytest_socket.embed  pytest_socket.pth  pytest_socket.py  setup.py  tox.ini
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  codesee-arch-diagram.yml  codspeed.yml  publish.yml  python.yml  stale-issues.yml  zizmor.yml
src/pytest_socket/: __init__.py
tests/: common.py  conftest.py  test_async.py  test_benchmarks.py  test_combinations.py  test_dns.py  test_doctest.py  test_precedence.py  test_restrict_hosts.py  test_socket.py  test_subprocess.py
