[project]
name = "pytest-socket"
version = "0.7.0"
description = "Pytest Plugin to disable socket calls during tests"
authors = [{ name = "Mike Fiedler", email = "miketheman@gmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.9"
dependencies = ["pytest>=7.0.0"]

[project.optional-dependencies]
dev = [
    "coverage[toml] >= 7.9",
    "pytest-httpbin >= 2.1.0",
    "pytest-randomly >= 3.15.0",
    "requests >= 2.32.4",
    "starlette >= 0.47.1",
    "httpx >= 0.28.1",
]

[project.urls]
"Homepage" = "https://pypi.org/project/pytest-socket/"
"Repository" = "https://github.com/miketheman/pytest-socket"
"Bug Tracker" = "https://github.com/miketheman/pytest-socket/issues"
"Change Log" = "https://github.com/miketheman/pytest-socket/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/miketheman"



[project.entry-points.pytest11]
socket = 'pytest_socket'

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "README.md",
    "tests/*",
    ".flake8",
]

[tool.coverage.report]
include = ["src/pytest_socket/*", "tests/*"]

[tool.isort]
known_first_party = ['pytest_socket', 'conftest']
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profilegcm
profile = "black"

[tool.vulture]
ignore_decorators = ["@pytest.fixture"]
ignore_names = ["pytest_*"]
paths = ["src/pytest_socket"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
