[project]
name = "pytest-socket"
version = "0.8.0"
description = "Pytest Plugin to disable socket calls during tests"
authors = [{ name = "Mike Fiedler", email = "miketheman@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = ["pytest>=7.0.0"]

[dependency-groups]
dev = [
    "coverage[toml] >= 7.9",
    "httpx >= 0.28.1",
    # mutmut 3.6.0 crashes under pytester-based suites (relative source_paths
    # resolved against a changed cwd). Fixed by boxed/mutmut#527, merged but not
    # yet released. Pinned to a main commit that includes the fix; switch back to
    # a released version once one ships with it.
    "mutmut @ git+https://github.com/boxed/mutmut.git@1d11c1be49ae106df40a5d209c51b1873c0a8a74",
    "mypy >= 1.20",
    "pytest-codspeed>=5.0.2",
    "pytest-randomly >= 3.15.0",
    "starlette >= 0.47.1",
]

[project.urls]
"Homepage" = "https://pypi.org/project/pytest-socket/"
"Repository" = "https://github.com/miketheman/pytest-socket"
"Bug Tracker" = "https://github.com/miketheman/pytest-socket/issues"
"Change Log" = "https://github.com/miketheman/pytest-socket/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/miketheman"

[project.entry-points.pytest11]
socket = 'pytest_socket'

[tool.uv.build-backend]
source-include = [".flake8", "tests/*"]

[tool.pytest]
addopts = [
    # mutmut leaves a copy of the project under mutants/; keep pytest from
    # collecting it (its tests/ shadow the real ones and clash on import).
    "--ignore=mutants",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
include = ["src/pytest_socket/*", "tests/*"]

[tool.isort]
known_first_party = ['pytest_socket', 'conftest']
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profilegcm
profile = "black"

[tool.mypy]
strict = true

[tool.vulture]
ignore_decorators = ["@pytest.fixture"]
ignore_names = ["pytest_*"]
paths = ["src/pytest_socket"]

[tool.mutmut]
source_paths = ["src/pytest_socket"]
pytest_add_cli_args_test_selection = ["tests/"]
# Skip lines whose mutations aren't worth gating on. help= and stacklevel=
# are cosmetic. strict=False is skipped for its equivalent strict=None mutant
# (None is falsy, == False); note this also skips the killable strict=True,
# whose behavior is covered by test_cidr_with_host_bits_set_is_parsed_leniently.
do_not_mutate_patterns = ["help=", "stacklevel=", "strict=False"]

[build-system]
requires = ["uv_build>=0.7.20,<0.12.0"]
build-backend = "uv_build"
